// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Component with total bar should render snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root makeStyles-table-31"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-rowCount-32"
            scope="col"
          />
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Building description
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Internal area in m
            <sup>
              2
            </sup>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            In use?
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            colspan="2"
            scope="col"
          >
            Date last in use?
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-rowCount-32"
          >
            1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-35"
            colspan="1"
          >
            <div
              class="MuiInputBase-root makeStyles-input-36"
            >
              <input
                class="MuiInputBase-input"
                placeholder="Add another"
                type="text"
                value="30 Lake Road"
              />
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-35"
            colspan="1"
          >
            <div
              class="MuiInputBase-root makeStyles-input-36 MuiInputBase-adornedEnd"
            >
              <input
                class="MuiInputBase-input MuiInputBase-inputAdornedEnd"
                placeholder="Internal area"
                type="text"
                value="200"
              />
              <span>
                m
                <sup>
                  2
                </sup>
              </span>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-35"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectInput-37"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select makeStyles-select-38 MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                role="button"
                tabindex="0"
              >
                Yes
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                tabindex="-1"
                value="Yes"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-35"
            colspan="1"
          >
            <div
              class="MuiInputBase-root makeStyles-input-36"
            >
              <input
                class="MuiInputBase-input"
                placeholder="dd / mm / yyyy"
                type="text"
                value="12/08/1999"
              />
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-deleteRow-34"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="closebtn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-rowCount-32"
          >
            <div
              class="MuiBox-root MuiBox-root-40"
            >
              2
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-35"
            colspan="1"
          >
            <div
              class="MuiInputBase-root makeStyles-input-36"
            >
              <input
                class="MuiInputBase-input"
                placeholder="Add another"
                type="text"
                value=""
              />
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-35"
            colspan="1"
          >
            <div
              class="MuiInputBase-root makeStyles-input-36 MuiInputBase-adornedEnd"
            >
              <input
                class="MuiInputBase-input MuiInputBase-inputAdornedEnd"
                placeholder="Internal area"
                type="text"
                value=""
              />
              <span>
                m
                <sup>
                  2
                </sup>
              </span>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-35"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectInput-37"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select makeStyles-select-38 MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                placeholder="Internal area"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-35"
            colspan="2"
          >
            <div
              class="MuiInputBase-root makeStyles-input-36"
            >
              <input
                class="MuiInputBase-input"
                data-testid="lastYear"
                placeholder="dd / mm / yyyy"
                type="text"
                value=""
              />
            </div>
          </td>
        </tr>
      </tbody>
      <tfoot
        class="MuiTableFooter-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-footer"
        >
          <td
            class="MuiTableCell-root MuiTableCell-footer makeStyles-rowCount-32"
          />
          <td
            class="MuiTableCell-root MuiTableCell-footer"
          >
            <strong>
              Total
            </strong>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-footer"
          >
            200 m
            <sup>
              2
            </sup>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-footer"
          />
          <td
            class="MuiTableCell-root MuiTableCell-footer"
            colspan="2"
          />
        </tr>
      </tfoot>
    </table>
  </div>
</DocumentFragment>
`;

exports[`List Component without total bar should render snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root makeStyles-table-21"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-rowCount-22"
            scope="col"
          />
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Building description
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Internal area in m
            <sup>
              2
            </sup>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            In use?
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            colspan="2"
            scope="col"
          >
            Date last in use?
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-rowCount-22"
          >
            1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-25"
            colspan="1"
          >
            <div
              class="MuiInputBase-root makeStyles-input-26"
            >
              <input
                class="MuiInputBase-input"
                placeholder="Add another"
                type="text"
                value="30 Lake Road"
              />
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-25"
            colspan="1"
          >
            <div
              class="MuiInputBase-root makeStyles-input-26 MuiInputBase-adornedEnd"
            >
              <input
                class="MuiInputBase-input MuiInputBase-inputAdornedEnd"
                placeholder="Internal area"
                type="text"
                value="200"
              />
              <span>
                m
                <sup>
                  2
                </sup>
              </span>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-25"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectInput-27"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select makeStyles-select-28 MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                role="button"
                tabindex="0"
              >
                Yes
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                tabindex="-1"
                value="Yes"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-25"
            colspan="1"
          >
            <div
              class="MuiInputBase-root makeStyles-input-26"
            >
              <input
                class="MuiInputBase-input"
                placeholder="dd / mm / yyyy"
                type="text"
                value="12/08/1999"
              />
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-deleteRow-24"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="closebtn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-rowCount-22"
          >
            <div
              class="MuiBox-root MuiBox-root-30"
            >
              2
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-25"
            colspan="1"
          >
            <div
              class="MuiInputBase-root makeStyles-input-26"
            >
              <input
                class="MuiInputBase-input"
                placeholder="Add another"
                type="text"
                value=""
              />
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-25"
            colspan="1"
          >
            <div
              class="MuiInputBase-root makeStyles-input-26 MuiInputBase-adornedEnd"
            >
              <input
                class="MuiInputBase-input MuiInputBase-inputAdornedEnd"
                placeholder="Internal area"
                type="text"
                value=""
              />
              <span>
                m
                <sup>
                  2
                </sup>
              </span>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-25"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectInput-27"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select makeStyles-select-28 MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                placeholder="Internal area"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-inputCell-25"
            colspan="2"
          >
            <div
              class="MuiInputBase-root makeStyles-input-26"
            >
              <input
                class="MuiInputBase-input"
                data-testid="lastYear"
                placeholder="dd / mm / yyyy"
                type="text"
                value=""
              />
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
